<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/welcome_to_qr_generator"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="377dp"
        android:layout_height="175dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.123"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/Generator"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:text="@string/generate_qr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/scan"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/scan"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:text="@string/scan_qr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.352" />
</androidx.constraintlayout.widget.ConstraintLayout>